--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
 <resources>
     <dimen name="question_height">50dp</dimen>
     <dimen name="separator_width">2dp</dimen>
+
+    <dimen name="message_author_image_size">40dp</dimen>
+    <dimen name="message_time_width">50dp</dimen>
 </resources>
