--- a/app/src/main/res/layout/fragment_messages.xml
+++ b/app/src/main/res/layout/fragment_messages.xml
@@ -6,10 +6,10 @@
     android:orientation="vertical"
     >
 
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/messagesRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Messages fragment"
         />
 
 </LinearLayout>
