Create the custom view for podiums.

--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -6,10 +6,15 @@
     android:orientation="vertical"
     >
 
-    <TextView
+    <com.peppersalt.peppersalt.customviews.podiumView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Ranking fragment"
+        />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rankingRecyclerView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         />
 
 </LinearLayout>
