Add fake data for the Ranking view

--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -16,6 +16,7 @@
         >
 
         <com.peppersalt.peppersalt.customviews.podiumView
+            android:id="@+id/podiumView"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
