--- a/app/src/main/res/layout/fragment_messages_row.xml
+++ b/app/src/main/res/layout/fragment_messages_row.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
+    android:padding="@dimen/keyline_1"
     >
 
     <ImageView
@@ -16,6 +17,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:paddingEnd="@dimen/keyline_1"
+        android:paddingStart="@dimen/keyline_1"
         >
 
         <LinearLayout
