--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,5 +18,8 @@
     <color name="default_background">#3d3d3d</color>
 
     <!-- PepperSalt colors -->
-    <color name="separator_colors">#DFDFDF</color>
+    <color name="separator_colors">#9E9E9E</color>
+    <color name="background_fragments_color">#E3D69F</color>
+    <color name="text_color">#616161</color>
+
 </resources>
