--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,7 @@
 
     <dimen name="message_author_image_size">40dp</dimen>
     <dimen name="message_time_width">50dp</dimen>
+
+    <dimen name="keyline_05">6dp</dimen>
+    <dimen name="keyline_1">12dp</dimen>
 </resources>
