--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -9,17 +9,15 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:orientation="horizontal"
-        android:weightSum="3"
         android:layout_weight="1"
         >
 
         <com.peppersalt.peppersalt.customviews.podiumView
             android:id="@+id/podiumView"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
             />
 
     </LinearLayout>
