--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -26,6 +26,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_weight="1"
+        android:weightSum="5"
         >
         <FrameLayout
             android:id="@+id/announce_fragment"
@@ -33,6 +34,7 @@
             android:layout_height="wrap_content"
             android:background="@color/background_fragments_color"
             android:padding="@dimen/keyline_05"
+            android:layout_weight="2"
             />
 
         <View
@@ -47,6 +49,7 @@
             android:layout_height="@dimen/question_height"
             android:background="@color/background_fragments_color"
             android:padding="@dimen/keyline_05"
+            android:layout_weight="1"
             />
 
         <View
@@ -61,6 +64,7 @@
             android:layout_height="wrap_content"
             android:background="@color/background_fragments_color"
             android:padding="@dimen/keyline_05"
+            android:layout_weight="2"
             />
 
     </LinearLayout>
