--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -31,7 +31,7 @@
         <FrameLayout
             android:id="@+id/announce_fragment"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:background="@color/background_fragments_color"
             android:padding="@dimen/keyline_05"
             android:layout_weight="2"
@@ -46,7 +46,7 @@
         <FrameLayout
             android:id="@+id/question_fragment"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/question_height"
+            android:layout_height="0dp"
             android:background="@color/background_fragments_color"
             android:padding="@dimen/keyline_05"
             android:layout_weight="1"
@@ -61,7 +61,7 @@
         <FrameLayout
             android:id="@+id/ranking_fragment"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:background="@color/background_fragments_color"
             android:padding="@dimen/keyline_05"
             android:layout_weight="2"
