Handle the download of images for the announce fragment

--- a/app/src/main/res/layout/fragment_announce.xml
+++ b/app/src/main/res/layout/fragment_announce.xml
@@ -3,13 +3,25 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     >
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Announce fragment"
+    <ImageView
+        android:id="@+id/announceImage1"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_marginEnd="@dimen/keyline_1"
+        android:layout_marginStart="@dimen/keyline_1"
+        android:layout_weight="1"
+        />
+
+    <ImageView
+        android:id="@+id/announceImage2"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_marginEnd="@dimen/keyline_1"
+        android:layout_marginStart="@dimen/keyline_1"
+        android:layout_weight="1"
         />
 
 </LinearLayout>
