--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -4,21 +4,17 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/default_background"
     >
 
     <FrameLayout
         android:id="@+id/messages_fragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:layout_margin="@dimen/keyline_05"
         android:layout_weight="1"
-        android:background="@color/background_fragments_color"
-        android:padding="@dimen/keyline_05"
-        />
-
-    <View
-        android:layout_width="@dimen/separator_width"
-        android:layout_height="match_parent"
-        android:background="@color/separator_colors"
+        android:background="@drawable/fragment_background"
+        android:padding="@dimen/keyline_1"
         />
 
     <LinearLayout
@@ -32,38 +28,29 @@
             android:id="@+id/announce_fragment"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:background="@color/background_fragments_color"
-            android:padding="@dimen/keyline_05"
+            android:layout_margin="@dimen/keyline_05"
+            android:background="@drawable/fragment_background"
+            android:padding="@dimen/keyline_1"
             android:layout_weight="3"
-            />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/separator_width"
-            android:background="@color/separator_colors"
             />
 
         <FrameLayout
             android:id="@+id/question_fragment"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:background="@color/background_fragments_color"
-            android:padding="@dimen/keyline_05"
+            android:layout_margin="@dimen/keyline_05"
+            android:background="@drawable/fragment_background"
+            android:padding="@dimen/keyline_1"
             android:layout_weight="1"
-            />
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/separator_width"
-            android:background="@color/separator_colors"
             />
 
         <FrameLayout
             android:id="@+id/ranking_fragment"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:background="@color/background_fragments_color"
-            android:padding="@dimen/keyline_05"
+            android:layout_margin="@dimen/keyline_05"
+            android:background="@drawable/fragment_background"
+            android:padding="@dimen/keyline_1"
             android:layout_weight="2"
             />
 
