--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,9 @@
     <dimen name="message_time_width">50dp</dimen>
 
     <dimen name="podium_number_size">30sp</dimen>
-    <dimen name="keyline_05">6dp</dimen>
-    <dimen name="keyline_1">12dp</dimen>
+    <dimen name="keyline_05">3dp</dimen>
+    <dimen name="keyline_1">6dp</dimen>
+    <dimen name="keyline_2">12dp</dimen>
+    
+    <dimen name="background_corner_radius">10dp</dimen>
 </resources>
