--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/default_background"
+    android:weightSum="5"
     >
 
     <FrameLayout
@@ -12,46 +13,54 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_margin="@dimen/keyline_05"
-        android:layout_weight="1"
-        android:background="@drawable/fragment_background"
-        android:padding="@dimen/keyline_1"
+        android:layout_weight="2"
+        android:background="@drawable/background_fragment_default"
         />
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_weight="1"
-        android:weightSum="6"
+        android:layout_weight="3"
+        android:weightSum="5"
         >
-        <FrameLayout
-            android:id="@+id/announce_fragment"
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_margin="@dimen/keyline_05"
-            android:background="@drawable/fragment_background"
-            android:padding="@dimen/keyline_1"
-            android:layout_weight="3"
-            />
+            android:layout_weight="4"
+            android:orientation="horizontal"
+            android:weightSum="40"
+            >
+
+            <FrameLayout
+                android:id="@+id/announce_fragment"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="@dimen/keyline_05"
+                android:background="@color/default_background"
+                android:layout_weight="21"
+                />
+
+            <FrameLayout
+                android:id="@+id/ranking_fragment"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="@dimen/keyline_05"
+                android:background="@color/default_background"
+                android:layout_weight="19"
+                />
+
+        </LinearLayout>
 
         <FrameLayout
             android:id="@+id/question_fragment"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_margin="@dimen/keyline_05"
-            android:background="@drawable/fragment_background"
+            android:background="@drawable/background_fragment_question"
             android:padding="@dimen/keyline_1"
             android:layout_weight="1"
-            />
-
-        <FrameLayout
-            android:id="@+id/ranking_fragment"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_margin="@dimen/keyline_05"
-            android:background="@drawable/fragment_background"
-            android:padding="@dimen/keyline_1"
-            android:layout_weight="2"
             />
 
     </LinearLayout>
