--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -3,22 +3,20 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:weightSum="2"
     >
 
-    <com.peppersalt.peppersalt.customviews.podiumView
-        android:id="@+id/podiumView"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/banner_rank_height"
+        android:src="@drawable/leaderboard"
         />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rankingRecyclerView"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         />
 
 </LinearLayout>
