--- a/app/src/main/res/layout/fragment_question.xml
+++ b/app/src/main/res/layout/fragment_question.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:autofit="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -11,38 +13,99 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:visibility="gone"
         >
 
-        <TextView
-            android:id="@+id/question"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            />
+            android:orientation="horizontal"
+            >
 
-        <TextView
-            android:id="@+id/answer1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
+            <ImageView
+                android:layout_width="@dimen/quote_size"
+                android:layout_height="@dimen/quote_size"
+                android:src="@drawable/quote_left"
+                />
 
-        <TextView
-            android:id="@+id/answer2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
+            <me.grantland.widget.AutofitTextView
+                android:id="@+id/question"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:maxLines="1"
+                android:padding="@dimen/keyline_1"
+                android:paddingBottom="@dimen/keyline_2"
+                android:paddingStart="@dimen/keyline_2"
+                android:textSize="@dimen/text_question_size"
+                android:textStyle="bold"
+                />
 
-        <TextView
-            android:id="@+id/answer3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            />
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/answer4"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            />
+            android:orientation="vertical"
+            >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="@dimen/keyline_05"
+                >
+
+                <TextView
+                    android:id="@+id/answer1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    tools:text="ANSWER 1"
+                    />
+
+                <TextView
+                    android:id="@+id/answer2"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    tools:text="ANSWER 2"
+                    />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                >
+
+                <TextView
+                    android:id="@+id/answer3"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    tools:text="ANSWER 3"
+                    />
+
+                <TextView
+                    android:id="@+id/answer4"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    tools:text="ANSWER 4"
+                    />
+            </LinearLayout>
+
+            <ImageView
+                android:layout_width="@dimen/quote_size"
+                android:layout_height="@dimen/quote_size"
+                android:layout_gravity="end"
+                android:src="@drawable/quote_right"
+                />
+
+        </LinearLayout>
     </LinearLayout>
 
     <ProgressBar
@@ -57,7 +120,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:text="@string/no_messages"
+        android:text="@string/no_questions"
         android:visibility="gone"
         />
 
