fix some bugs on messages and ranking views

--- a/app/src/main/res/layout/fragment_messages.xml
+++ b/app/src/main/res/layout/fragment_messages.xml
@@ -3,19 +3,20 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     >
 
     <LinearLayout
         android:id="@+id/content_view"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:visibility="gone"
         >
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="@dimen/keyline_1"
             android:text="@string/last_messages"
@@ -27,6 +28,7 @@
             android:id="@+id/messagesRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:reverseLayout="true"
             />
 
     </LinearLayout>
