--- a/app/src/main/res/layout/fragment_ranking.xml
+++ b/app/src/main/res/layout/fragment_ranking.xml
@@ -41,7 +41,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:text="@string/no_messages"
+        android:text="@string/no_leaderboard"
         android:textColor="@color/background_fragments_color"
         android:visibility="gone"
         />
