--- a/app/src/main/res/layout/fragment_messages_row.xml
+++ b/app/src/main/res/layout/fragment_messages_row.xml
@@ -49,10 +49,12 @@
 
         </LinearLayout>
 
-        <TextView
+        <com.peppersalt.peppersalt.emoji.customview.EmojiTextView
             android:id="@+id/message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="bottom"
+            android:minHeight="@dimen/textView_message_minHeight"
             android:textSize="@dimen/text_message_size"
             />
 
